change ref color

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -78,7 +78,7 @@
 \usepackage{textcomp}
 \usepackage{nameref}
 \usepackage[finalnew]{Stylesheets/trackchanges}
-\usepackage[colorlinks=true,linkcolor=black,citecolor=darkgray,urlcolor=black,pdftitle={When Communication is Hard: Neurocognitive Dynamics underlying Language and Communication in Autism and Social Anxiety},pdfauthor={Margot Mangnus},pdfdisplaydoctitle]{hyperref} % For hyperlinks in the PDF
+\usepackage[colorlinks=true,linkcolor=black,citecolor=black,urlcolor=black,pdftitle={When Communication is Hard: Neurocognitive Dynamics underlying Language and Communication in Autism and Social Anxiety},pdfauthor={Margot Mangnus},pdfdisplaydoctitle]{hyperref} % For hyperlinks in the PDF
 \urlstyle{rm}
 \usepackage{anyfontsize} % make text a specific font size instead of small, tiny, huge etc.
 
